remove unused code

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="center" />
 
-    <ImageView
-        android:id="@+id/CoverView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:src="@drawable/thumbnail"/>
-
     <LinearLayout
         android:id="@+id/LoadingView"
         android:layout_width="match_parent"
@@ -39,27 +32,10 @@
             android:textSize="20sp" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|right"
-        android:layout_margin="20dp"
-        android:orientation="horizontal">
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:onClick="onClickRotate"
-            android:src="@drawable/ic_rotate_right" />
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:onClick="onClickSwitchScreen"
-            android:src="@drawable/ic_switch_screen" />
-
-    </LinearLayout>
-
+    <ImageView
+        android:id="@+id/CoverView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:src="@drawable/bg_room_change" />
 </FrameLayout>
