--- a/app/src/main/res/layout/view_room_item.xml
+++ b/app/src/main/res/layout/view_room_item.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <com.pili.pldroid.player.widget.PLVideoTextureView
-        android:id="@+id/VideoView"
+    <ImageView
+        android:id="@+id/anchor_img"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center" />
-
+        android:background="@drawable/bg_room_change"
+        android:scaleType="fitXY" />
 </FrameLayout>
