--- a/app/src/main/res/layout/fragment_room.xml
+++ b/app/src/main/res/layout/fragment_room.xml
@@ -1,12 +1,168 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/room_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/transparent"
+    android:clickable="true">
+
+    <RelativeLayout
+        android:id="@+id/scroll_watermark"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:visibility="visible">
+
+        <TextView
+            android:id="@+id/live_scroll_watermark"
+            style="@style/watermark_style" />
+
+        <TextView
+            android:id="@+id/live_scroll_watermark_time"
+            style="@style/watermark_style"
+            android:layout_below="@+id/live_scroll_watermark"
+            android:layout_marginTop="0.0dip"
+            android:padding="0.0dip" />
+    </RelativeLayout>
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:id="@+id/room_close"
+        style="@style/inke_img_40_40"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorAccent" />
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="11.0dip"
+        android:layout_marginRight="@dimen/dimens_dip_10"
+        android:layout_marginTop="@dimen/dimens_dip_10"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/close_" />
+
+    <RelativeLayout
+        android:id="@+id/scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <View
+            android:id="@+id/click_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <FrameLayout
+            android:id="@+id/users_container"
+            style="@style/room_users_container" />
+
+        <TextView
+            android:id="@+id/live_watermark"
+            style="@style/watermark_style"
+            android:layout_below="@+id/users_container" />
+
+        <TextView
+            android:id="@+id/live_watermark_time"
+            style="@style/watermark_style"
+            android:layout_below="@+id/live_watermark"
+            android:layout_marginTop="0.0dip"
+            android:padding="0.0dip" />
+
+        <Button
+            android:id="@+id/btn_manage"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dimens_dip_24"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/live_watermark"
+            android:layout_marginRight="@dimen/dimens_dip_10"
+            android:layout_marginTop="@dimen/dimens_dip_20"
+            android:paddingLeft="10.0dip"
+            android:paddingRight="10.0dip"
+            android:textSize="12.0sp"
+            android:text="映客号:1032093"
+            android:textColor="@color/payeco_hintTextColor"
+            android:background="@color/payeco_textColorWhite"
+            android:visibility="visible" />
+
+        <!--<com.meelive.ingkee.v1.ui.view.room.view.RoomGoldCountView-->
+        <!--android:id="@+id/gold_count_container"-->
+        <!--style="@style/room_gold_count_container"-->
+        <!--android:layout_below="@+id/users_container"-->
+        <!--android:visibility="gone" />-->
+
+        <LinearLayout
+            android:id="@+id/public_chat_container"
+            style="@style/room_public_chat_container"
+            android:layout_above="@+id/oper_container">
+
+            <ListView
+                android:background="@color/colorAccent"
+                android:id="@+id/listview_public_chat"
+                style="@style/room_public_chat_listview" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/barrage_view_room"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/public_chat_container"
+            android:layout_marginBottom="5.0dip"
+            android:minHeight="50.0dip"
+            android:orientation="vertical" />
+
+        <!--<com.meelive.ingkee.ui.room.view.EnterRoomEffectsView-->
+        <!--android:id="@+id/enter_room_effects_view"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_above="@+id/public_chat_container"-->
+        <!--android:layout_marginBottom="5.0dip" />-->
+
+        <!--<com.meelive.ingkee.v1.ui.view.room.view.RoomContinueGiftContainerView-->
+        <!--android:id="@+id/continue_gift_container"-->
+        <!--style="@style/room_continue_gift_cotnainer"-->
+        <!--android:layout_above="@+id/oper_container" />-->
+
+        <LinearLayout
+            android:id="@+id/oper_container"
+            style="@style/room_oper_container"
+            android:orientation="vertical" />
+
+        <!--<com.meelive.ingkee.v1.ui.view.room.RoomHeartView-->
+        <!--android:id="@+id/heart_view"-->
+        <!--style="@style/room_heart" />-->
+
+        <!--<com.meelive.ingkee.v1.ui.view.room.view.RoomChatView-->
+        <!--android:id="@+id/chat_container"-->
+        <!--style="@style/room_chat_container"-->
+        <!--android:background="@color/inke_color_60" />-->
+
+
+        <!--<com.meelive.ingkee.v1.ui.widget.GifAnimationView-->
+        <!--android:id="@+id/gif_view"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" />-->
+
+        <!--<include-->
+        <!--layout="@layout/room_full_screen_gift"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" />-->
+
+        <!--<include-->
+        <!--android:id="@+id/secret_room_share"-->
+        <!--layout="@layout/secret_share_view"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true" />-->
+
+        <ImageView
+            android:id="@+id/oriention_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:clickable="true"
+            android:src="@drawable/video_zoomin"
+            android:visibility="gone" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/finish_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
